<resources>
    <string name="app_name">SocialSportApp</string>
    <string name="button">Button</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="city" />
    <string name="day" />
    <string name="sport" />
    <string name="create">Create</string>
    <string name="pick_date">Pick Date</string>
    <string name="start">Start</string>
    <string name="end">END</string>
    <string name="add_image">ADD image</string>
    <string name="add_new_activity">Add New Activity</string>

    <string-array name="array_names">
        <item>Day</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string-array name="typs_sport">
        <item>Type of activity</item>
        <item>Football</item>
        <item>Basketball</item>
        <item>Tennies</item>
        <item>Group run</item>
    </string-array>


    <string-array name="array_ofCitys">
        <item>City</item>
        <item>Ashdod</item>
        <item>Tel-Aviv</item>
        <item>Haifa</item>
        <item>Natanya</item>
    </string-array>


</resources>