<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="20dp"
        android:background="#23673AB7"
        android:text="@string/add_new_activity"
        android:textColor="#673AB7"
        android:textColorHighlight="#9C27B0"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="90dp"
        android:text="Type of Activity"

        />



    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="150dp"
        android:text="Date"

        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="210dp"
        android:text="Time"

        />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="290dp"
        android:text="City"

        />

    <Spinner
        android:id="@+id/spinnerCity"
        android:layout_width="135dp"
        android:layout_height="46dp"
        android:layout_marginStart="195dp"
        android:layout_marginLeft="195dp"
        android:layout_marginTop="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="350dp"
        android:text="Address"

        />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="335dp"
        android:ems="10"
        android:hint="Street "

        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="430dp"
        android:text="Participants"

        />

    <EditText
        android:id="@+id/etParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="410dp"
        android:ems="10"
        android:hint="Max 100"

        android:inputType="number" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="490dp"
        android:text="Image"

        />


    <Spinner
        android:id="@+id/TypeOfActivityAdd"
        android:layout_width="146dp"
        android:layout_height="39dp"
        android:layout_marginStart="185dp"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <Button
        android:id="@+id/StartBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="200dp"
        android:text="@string/start"
        app:backgroundTint="#CD673AB7" />

    <Button
        android:id="@+id/EndBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="200dp"
        android:text="@string/end"
        app:backgroundTint="#CD673AB7" />

    <Button
        android:id="@+id/Createbtn"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="525dp"
        android:text="@string/create"
        app:backgroundTint="#959C27B0" />

    <Button
        android:id="@+id/Imagebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="475dp"
        android:text="@string/add_image"
        app:backgroundTint="#CD673AB7" />


    <Button
        android:id="@+id/Datebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="140dp"
        android:text="@string/pick_date"
        app:backgroundTint="#CD673AB7" />



</RelativeLayout>